--- a/manifest_files/pod.yml
+++ b/manifest_files/pod.yml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: myapp-pod
   labels:
-    app: nginx
-    tier: frontend
+    app: myapp
+    tier: front-end
 spec:
   containers:
-  - name: nginx
+  - name: nginx-container
     image: nginx
-    ports:
-    - containerPort: 80
